# bcee

./: AGENTS.md  README.md  doctor.bat  pyproject.toml  release_readiness.json  run_tests.bat
docs/adr/: 0001-live-safety-default.md  0002-centralized-binance-access.md  0003-exact-numeric-and-storage-boundaries.md
docs/binance/: api-compatibility-matrix.md
docs/customer/: unresolved-customer-inputs.md
docs/data/: data-requirements.md
docs/economics/: economic-feasibility-specification.md
docs/licensing/: third-party-licensing-report.md
docs/operations/: windows-python-compatibility-matrix.md
docs/quantitative/: mathematical-specification.md
docs/requirements/: product-requirements.md
docs/reviews/: gate-0-review.md
docs/risk/: customer-risk-policy.schema.json
tools/: validate_gate0.py
